# FEDDLib

./: .clang-format  .gitattributes  CMakeLists.txt  TPLsList.cmake  Version.cmake  h origin wisteria
Doygen/html/: annotated.html  classes.html  dir_0056573174e269b37a1fe6d3d25056a4.html  dir_014e90808fed01128adda247c507d8c6.html  dir_01872b46ec6947a7676f956fa67739a7.html  dir_037ad3af8af231925ade944e417a0d59.html  dir_03a753ccf3fc6993f423db88ae525f3f.html  dir_04cf6c146bfb2ca0408e1b7909b8def3.html  dir_0677c3d03b6f5629e2df03bc0a9fae1c.html  dir_07c7d6df633c850a305cdad31cc7b623.html  dir_08d468486bd4df20000bdcba8058e0dd.html  dir_0a34380628ab8ec8d2392ad694a8519c.html  dir_0a40cff13cac98f41bdde0d58c188aa3.html  dir_0a42ce828205e46a0de19ddebcf6b7cc.html  dir_10f2c397aecd21b6d7f77ee8aa30579f.html  dir_13eb80370a3151d01725e06244b2a777.html  dir_14cbb978d6a006c582315150059e6ec9.html  dir_1796d3649ce49ac174a6c121efaf47b5.html  dir_1874089d82c5ee7155abc474169bbcc8.html  dir_1c3d559a23bd2b4557a541a478f5fca7.html  dir_222afd7252a9a67ec48ba9a44efac569.html  dir_229102e0f991c7d43de1403e5ed65e45.html  dir_22e7572330db9a51c31d5e91a1f9c344.html  dir_24ab904050155bc21e6062da912e73c8.html  dir_25f2ed2a990ff7a80e2db70cf58a5ab3.html  dir_2670d9266a147a9ac9c148d89a766455.html  dir_26f7127e4ec55af2902a8a183476631a.html  dir_27cc938f9971626274e1c65c97b2b1fc.html  dir_29ae56bd1f3507854e76a3cff2d2c931.html  dir_2b9ca7b9fef893b4511958dbc94e21cc.html  dir_2e43cce7754b7ff37a62c0a595eda7e0.html  dir_2fe0c634ba3f314696c2b0c9f9a99e9b.html  dir_309cdf7f238cfa7506174de4d68f11de.html  dir_324450c586d02c6e6801f0f2e5703055.html  dir_34aa2eeb62919d14b49cbdfbfd7b6e49.html  dir_37a1f78bde61db6b4a1cc44f1a4e87e2.html  dir_37ee4b7a2be44e88b47843cc640b21c3.html  dir_384abaf715c49d068a74ddb59415455a.html  dir_3cf7f770f79c6843d669bfd8ed0c2a51.html  dir_3ece1f02fc9d5f31d818cacd923f12f7.html  (+324 more)
Doygen/html/search/: all_0.js  all_1.js  (+70 more)
Doygen/latex/: annotated.tex  hierarchy.tex  namespaces.tex  refman.tex
cmake/TPLs/: .FindTPLpybind11.cmake.swp  FindTPLTrilinos.cmake  FindTPLpybind11.cmake_old  FindTPLpython.cmake
feddlib/amr/: AdaptiveMeshRefinement_def.hpp  ErrorEstimation_decl.hpp  ErrorEstimation_def.hpp  RefinementFactory_def.hpp
feddlib/code_graveyard/: Graveyard.cpp
feddlib/core/: CMakeLists.txt
feddlib/core/AceFemAssembly/specific/: AssembleFEAceLaplace_decl.hpp  AssembleFEAceLinElas_decl.hpp  AssembleFEAceLinElas_def.hpp  AssembleFEAceNonLinElas_decl.hpp  AssembleFEAceNonLinElas_def.hpp  AssembleFEGeneralizedNewtonianStokes.cpp  AssembleFEGeneralizedNewtonianStokes.hpp  AssembleFEGeneralizedNewtonianStokes_decl.hpp  AssembleFEGeneralizedNewtonianStokes_def.hpp  AssembleFEGeneralizedNewtonian_decl.hpp  AssembleFEGeneralizedNewtonian_def.hpp  AssembleFENavierStokesNonNewtonian_decl.hpp  AssembleFENavierStokesNonNewtonian_def.hpp  AssembleFENavierStokes_decl.hpp  AssembleFENavierStokes_def.hpp  AssembleFEStokes.cpp  AssembleFEStokes.hpp  AssembleFEStokesNonNewtonian.cpp  AssembleFEStokesNonNewtonian.hpp  AssembleFEStokesNonNewtonian_decl.hpp  AssembleFEStokesNonNewtonian_def.hpp  AssembleFEStokes_decl.hpp  AssembleFEStokes_def.hpp  AssembleFE_Laplace_def.hpp  AssembleFE_LinElas original.cpp  AssembleFE_LinElas original.hpp  AssembleFE_LinElas_original_decl.hpp  AssembleFE_LinElas_original_def.hpp  AssembleFE_SCI_SMC_MLCK_def.hpp  CMakeLists.txt
feddlib/core/AceFemAssembly/specific/GeneralizedNewtonianModels/: CarreauYasuda_Python.cpp  CarreauYasuda_Python.hpp  CarreauYasuda_Python_decl.hpp  CarreauYasuda_Python_def.hpp  CarreauYasuda_decl.hpp  CarreauYasuda_def.hpp  Dimless_Carreau_decl.hpp  Dimless_Carreau_def.hpp  GNF_Const_Hematocrit.cpp  GNF_Const_Hematocrit.hpp  GNF_Const_Hematocrit_decl.hpp  GNF_Const_Hematocrit_def.hpp  GNF_Constant_Hematocrit.cpp  GNF_Constant_Hematocrit.hpp  GNF_Constant_Hematocrit_decl.hpp  GNF_Constant_Hematocrit_def.hpp  PowerLaw_decl.hpp  PowerLaw_def.hpp
feddlib/core/General/: BCBuilder_decl.hpp  BCBuilder_def.hpp  CMakeLists.txt  DefaultTypeDefs.hpp  DifferentiableFuncClass_decl.hpp  DifferentiableFuncClass_def.hpp  ExporterParaView_decl.hpp  ExporterParaView_def.hpp  HDF5Export.cpp  HDF5Export.hpp  HDF5Export_decl.hpp  HDF5Export_def.hpp  HDF5Import.cpp  HDF5Import.hpp  HDF5Import_decl.hpp  HDF5Import_def.hpp  InputToOutputMappingClass.hpp  InputToOutputMappingClass_decl.hpp  InputToOutputMappingClass_def.hpp
feddlib/core/General/tests/: CMakeLists.txt  example.cpp  pybind11_test.cpp  sacado_example.cpp  write_read.cpp
feddlib/core/General/tests/PyTrilinos_C++Tests/: CMakeLists.txt  pybind11_test_scipy.cpp
feddlib/core/General/tests/PyTrilinos_PythonTests/: CMakeLists.txt  GaussianProcessRegression.py
feddlib/core/MachineLearning/: CMakeLists.txt  FeedForwardNeuronalNetworkClass.cpp  FeedForwardNeuronalNetworkClass.hpp  FeedForwardNeuronalNetworkClass_decl.hpp  FeedForwardNeuronalNetworkClass_def.hpp  TrainedMLModelClass.cpp  TrainedMLModelClass.hpp  TrainedMLModelClass_decl.hpp  TrainedMLModelClass_def.hpp
feddlib/core/MachineLearning/ActivationFunctions/: Tanh.cpp  Tanh.hpp  Tanh_decl.hpp  Tanh_def.hpp
feddlib/core/MachineLearning/specific/: CMakeLists.txt  MultiLayerPerceptron.cpp  MultiLayerPerceptron.hpp  MultiLayerPerceptron_decl.hpp  MultiLayerPerceptron_def.hpp
feddlib/core/MachineLearning/tests/: CMakeLists.txt  Evaluate_DNN_linear_activation.cpp  Evaluate_DNN_nonlinear_activation.cpp  MatrixVectorProduct.cpp  ReadAndWriteMultiVectorsFromFile.cpp  ReadMatrixFromFile.cpp
feddlib/core/MachineLearning/tests/Test_Data_Linear_Activation_Function/: biases_layer_1.mtx  biases_layer_2.mtx  biases_layer_3.mtx  biases_layer_4.mtx  matrix_market_file.mtx  weight_matrix_layer_1.mtx  weight_matrix_layer_2.mtx  weight_matrix_layer_3.mtx  weight_matrix_layer_4.mtx
feddlib/core/MachineLearning/tests/Test_Data_Nonlinear_Activation_Function/: biases_layer_1.mtx  biases_layer_2.mtx  biases_layer_3.mtx  biases_layer_4.mtx  weight_matrix_layer_1.mtx  weight_matrix_layer_2.mtx  weight_matrix_layer_3.mtx  weight_matrix_layer_4.mtx
feddlib/problems/: CMakeLists.txt
(+1192 files in other folders)
